# eipi.boo

./: .gitignore  .nvim.lua  Cargo.toml  README.md  flake.nix
.github/workflows/: build-app-.yml
src/: confession.rs  db.rs  handler.rs  input.rs  main.rs  reply.rs  server.rs  tui.rs  web.rs
src/db/: confession.rs  mod.rs  reply.rs  vote.rs
src/helper/: consts.rs
src/server/: handler.rs  input.rs  mod.rs
src/tui/: card_view.rs  compose.rs  confession_box.rs  mod.rs  reply_panel.rs  statusline.rs
web/: index.html
